# deshift

./: .buildinfo  .gitignore  README.md  api.html  genindex.html  index.html  objects.inv  pyproject.toml  quickstart.html  search.html  searchindex.js
.doctrees/: api.doctree  environment.pickle  index.doctree  quickstart.doctree
.github/workflows/: doc.yml
_sources/: api.rst  index.rst  quickstart.ipynb
deshift/: __init__.py
deshift/_src/: distributed.py  pav.py  reflection.py  spectra.py  spectral_risk.py
docs/source/: conf.py  index.rst
examples/: amazon.html  amazon.ipynb  amazon.py  amazon_bert.ipynb  amazon_bert.py  amazon_llama.ipynb  cifar10c.ipynb  debug_amazon.py  myrtlenet.py  text_utils.py  train_fashion_mnist.html  train_fashion_mnist.ipynb
tests/: distributed_test.py  distributed_test.sh  group_spectral_risk_test.py  spectral_risk_test.py
